fixed zeo and withings oauth dance, more work on stats widget